2007-01-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: When saving the designer session,
	  instead of deleting the old widget and adding the new one, update
	  the existing widget.
	* libsteticui/Application.cs: Added some thread locking.
	* libsteticui/Project.cs: When a widget name changed event is received,
	  update the corresponding component from the current thread, there
	  is no need to do it in the gui thread.
	* libstetic/wrapper/Container.cs: Added null check for container child.

2007-01-11  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ActionGroupDesigner.cs, libsteticui/WidgetDesigner.cs,
	  libsteticui/ActionGroupEditSession.cs: Added undo support for the
	  global action group designer.
	* libsteticui/ApplicationBackend.cs: Catch errors when loading a
	  library to avoid aborting the whole update operation.
	* libsteticui/ProjectBackend.cs,
	  libsteticui/CodeGeneratorInternalClass.cs,
	  libsteticui/PaletteBackend.cs, libsteticui/PropertyGrid.cs,
	  libstetic/undo/ActionDiffAdaptor.cs, stetic/Stetic.cs,
	  stetic/DesignerView.cs: Track api changes.
	* libsteticui/CodeGenerator.cs: Include actions in the bind field list.
	* libsteticui/ComponentEventHandler.cs, libsteticui/Project.cs: The
	  component removed event now provides the name of the removed
	  component, no the component reference. Needed since the component
	  is already removed, and providing an instance in this case is
	  problematic.
	* libsteticui/ActionComponent.cs: Added property for gettion the group
	  of an action.
	* libsteticui/Makefile.am: Added new file.
	* libsteticui/UndoQueue.cs: Generalized the undo manager, so it can be
	  used for the action group editor.
	* libstetic/undo/DiffGenerator.cs: Improved error message.
	* libstetic/undo/UndoManager.cs: Make sure the UndoWriter works for
	  wrappers other than widgets. Don't include disposed or unregistered
	  wrappers into the undo event.